2011-07-25  Richard Murray  <murray@malabar.local>

	* examples/phaseplots.py: updated calls to PhasePlot to use new
	argument structure

	* src/phaseplot.py (PhasePlot): Updated call signature to be
	more pythonic and fixed up documentation.

	* examples/genswitch.py (genswitch): added new example showing
	PhasePlot functionality

	* src/phaseplot.py (boxgrid): added function to compute initial
	conditions around the edges of a box

2011-07-24  Richard Murray  <murray@malabar.local>

	* tests/margin_test.py: added simple unit tests for margin functions
	(initial versions just call functions; some comparisons missing)

	* examples/README: added missing README file

	* examples/phaseplots.py: FBS examples for phaseplot

	* tests/phaseplot_test.py: unit tests for phaseplot

	* src/phaseplot.py: initial cut at phase portrait function, built
	from amphaseplot (Feeback Systems [FBS], Astrom and Murray, 2008)

2011-07-15  Richard Murray  <murray@malabar.local>

	* tests/matlab_test.py (TestMatlab): added unittest for margin()
	commands (calling format only)

	* src/statesp.py (StateSpace): updated comments

	* tests/margin_test.py: set up unit tests for StabilityMargins() and
	PhaseCrossoverFrequencies()

	* src/__init__.py: added margins.py to __init__

2011-07-14  Richard Murray  <murray@malabar.local>

	* src/margins.py (GainPhaseMargin): moved freqplot.MarginPlot to
	margin.StabilityMargins (MarginPlot didn't actually plot anything)

	* src/margins.py (PhaseCrossoverFrequencies): added new function to
	compute frequencies that we cross real axis.  Contributed by Steffen
	Waldherr <waldherr@ist.uni-stuttgart.de>

2011-07-11  Richard Murray  <murray@malabar.local>

	* src/rlocus.py: added real() and imag() to list of functions
	imported from numpy

	* src/freqplot.py: renamed plotting functions to BodePlot,
	NyquistPlot, GangOf4Plot and MarginPlot.  Set up aliases to the more
	common names (bode, nyquest, gangof4, margin).  Mainly playing